Adding package build for macOS-arm64

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,13 +13,18 @@ source:
 build:
   skip: true  # [win]
   script: {{ PYTHON }} -m pip install . -vv
-  number: 0
+  number: 1
 
 requirements:
   build:
+    - cython                                 # [build_platform != target_platform]
+    - python                                 # [build_platform != target_platform]
+    - cross-python_{{ target_platform }}     # [build_platform != target_platform]
+    - numpy                                  # [build_platform != target_platform]
+    - swig >=4.0
     - {{ compiler('c') }}
     - {{ stdlib("c") }}
-    - swig >=4.0
+
   host:
     - gsl
     - numpy
@@ -28,6 +33,7 @@ requirements:
     - setuptools
     - setuptools-scm >=3.4.3
     - wheel
+
   run:
     - gsl
     - numpy >=1.23
